--- a/src/Topxia/AdminBundle/Resources/public/css/admin.css
+++ b/src/Topxia/AdminBundle/Resources/public/css/admin.css
@@ -237,7 +237,6 @@ input.LargeInput {width: 600px;}
 }
 .table-nomargin {
   margin-bottom: 0;
-  td
 }
 .table-noborder>thead>tr>th {
   border-bottom: 0;
@@ -308,6 +307,7 @@ input.LargeInput {width: 600px;}
   font-size: 22px;
   margin-bottom: 10px;
   display: block;
+  color: #2a6496;
 }
 
 .subfield-list li p {
