--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -197,116 +197,116 @@
             </h3>
           </div>
           <div class="panel-body">
-            <table class="table table-condensed table-noborder table-overflow">
-              <thead>
-              <tr>
-                <th width="60%">{{ '关键词'|trans }}</th>
-                <th width="30%">{{ '搜索次数'|trans }}</th>
-                <th></th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td class="text-middle">
-                  <div class="search-count js-cloud-search" data-count="30"></div>
-                </td>
-                <td>30</td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td class="text-middle">
-                  <div class="search-count js-cloud-search" data-count="20"></div>
-                </td>
-                <td>20</td>
-              </tr>
-              <tr>
-                <td class="text-middle">
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td>
-                  <div class="search-count js-cloud-search" data-count="13"></div>
-                </td>
-                <td>13</td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td class="text-middle">
-                  <div class="search-count js-cloud-search" data-count="10"></div>
-                </td>
-                <td>10</td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td class="text-middle">
-                  <div class="search-count js-cloud-search" data-count="10"></div>
-                </td>
-                <td>10</td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td class="text-middle">
-                  <div class="search-count js-cloud-search" data-count="10"></div>
-                </td>
-                <td>10</td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td class="text-middle">
-                  <div class="search-count js-cloud-search" data-count="8"></div>
-                </td>
-                <td>8</td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td class="text-middle">
-                  <div class="search-count js-cloud-search" data-count="8"></div>
-                </td>
-                <td>8</td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td class="text-middle">
-                  <div class="search-count js-cloud-search" data-count="6"></div>
-                </td>
-                <td>6</td>
-              </tr>
-              <tr>
-                <td>
-                  <a class="link-primary" href="">Edusoho安装教程</a>
-                </td>
-                <td class="text-middle">
-                  <div class="search-count js-cloud-search" data-count="4"></div>
-                </td>
-                <td>4</td>
-              </tr>
-              </tbody>
-            </table>
+            {% if setting('cloud_search.search_enabled') %}
+              <span>即将上线，敬请期待 </span>
+            {% else %}
+              <a target="_blank" href="{{ path('admin_edu_cloud_search') }}">免费接入云搜索获取热门搜索关键词</a>
+            {% endif %}
+            {# <table class="table table-condensed table-noborder table-overflow">
+               <thead>
+               <tr>
+                 <th width="60%">{{ '关键词'|trans }}</th>
+                 <th width="30%">{{ '搜索次数'|trans }}</th>
+                 <th></th>
+               </tr>
+               </thead>
+               <tbody>
+               <tr>
+                 <td>
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td class="text-middle">
+                   <div class="search-count js-cloud-search" data-count="30"></div>
+                 </td>
+                 <td>30</td>
+               </tr>
+               <tr>
+                 <td>
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td class="text-middle">
+                   <div class="search-count js-cloud-search" data-count="20"></div>
+                 </td>
+                 <td>20</td>
+               </tr>
+               <tr>
+                 <td class="text-middle">
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td>
+                   <div class="search-count js-cloud-search" data-count="13"></div>
+                 </td>
+                 <td>13</td>
+               </tr>
+               <tr>
+                 <td>
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td class="text-middle">
+                   <div class="search-count js-cloud-search" data-count="10"></div>
+                 </td>
+                 <td>10</td>
+               </tr>
+               <tr>
+                 <td>
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td class="text-middle">
+                   <div class="search-count js-cloud-search" data-count="10"></div>
+                 </td>
+                 <td>10</td>
+               </tr>
+               <tr>
+                 <td>
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td class="text-middle">
+                   <div class="search-count js-cloud-search" data-count="10"></div>
+                 </td>
+                 <td>10</td>
+               </tr>
+               <tr>
+                 <td>
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td class="text-middle">
+                   <div class="search-count js-cloud-search" data-count="8"></div>
+                 </td>
+                 <td>8</td>
+               </tr>
+               <tr>
+                 <td>
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td class="text-middle">
+                   <div class="search-count js-cloud-search" data-count="8"></div>
+                 </td>
+                 <td>8</td>
+               </tr>
+               <tr>
+                 <td>
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td class="text-middle">
+                   <div class="search-count js-cloud-search" data-count="6"></div>
+                 </td>
+                 <td>6</td>
+               </tr>
+               <tr>
+                 <td>
+                   <a class="link-primary" href="">Edusoho安装教程</a>
+                 </td>
+                 <td class="text-middle">
+                   <div class="search-count js-cloud-search" data-count="4"></div>
+                 </td>
+                 <td>4</td>
+               </tr>
+               </tbody>
+             </table>#}
           </div>
         </div>
       </div>
     </div>
-
-    {#{{ render(controller('TopxiaAdminBundle:Default:userCoinsRecordsBlock')) }}
-
-    {{ render(controller('TopxiaAdminBundle:Default:latestPaidOrdersBlock')) }}#}
-
   {% else %}
     <h4>{{ '欢迎来到%name%管理后台'|trans({'%name%': setting('site.name') }) }}</h4>
   {% endif %}
