--- a/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/operation-analysis-dashbord.html.twig
@@ -1,58 +1,56 @@
 <ul class="subfield-list eight-subfield clearfix">
   <li>
     <div class="title">{{ '登录用户'|trans }}</div>
-   <span class="number">
-      {{ loginCount }}
-    </span>
+    <span class="number">  {{ loginCount }} </span>
     <p>{{ '在线总数'|trans }}: {{ onlineCount }}</p>
   </li>
   <li>
     <div class="title">{{ '今日新增注册'|trans }}</div>
-    <a href="javascript:;" class="number">
+    <span class="number">
       {{ todayRegisterNum }}
-    </a>
+   </span>
     <p>{{ '注册总数'|trans }}: {{ totalRegisterNum }}</p>
   </li>
   <li>
     <div class="title">{{ '今日课程新增学员'|trans }}</div>
-    <a href="javascript:;" class="number">
+    <span class="number">
       {{ todayCourseMemberNum }}
-    </a>
+   </span>
     <p>{{ '总课程学习人次'|trans }}: {{ totalCourseMemberNum }}</p>
   </li>
   <li>
     <div class="title">{{ '今日班级新增学员'|trans }}</div>
-    <a href="javascript:;" class="number">
+    <span class="number">
       {{ todayClassroomMemberNum }}
-    </a>
+   </span>
     <p>{{ '总班级学习人次'|trans }}: {{ totalClassroomMemberNum }}</p>
   </li>
   <li>
     <div class="title">{{ '今日新增会员'|trans }}</div>
-    <a href="javascript:;" class="number">
+    <span class="number">
       {{ todayVipNum }}
-    </a>
+   </span>
     <p>{{ '总会员数'|trans }}: {{ totalVipNum }}</p>
   </li>
   <li>
     <div class="title">{{ '今日回答未回复'|trans }}</div>
-    <a href="javascript:;" class="number">
+    <span class="number">
       {{ todayThreadNum }}/{{ todayThreadUnAnswerNum }}
-    </a>
+   </span>
     <p>{{ '总问答数'|trans }}: {{ totalThreadNum }}</p>
   </li>
   <li>
     <div class="title">{{ '已发布课程'|trans }}</div>
-    <a href="javascript:;" class="number">
+    <span class="number">
       {{ publishedCourseNum }}
-    </a>
+   </span>
     <p>{{ '总课程数'|trans }}: {{ totalCourseNum }}</p>
   </li>
   <li>
     <div class="title">{{ '已发布班级'|trans }}</div>
-    <a href="javascript:;" class="number">
+    <span class="number">
       {{ publishedClassroomNum }}
-    </a>
+   </span>
     <p>{{ '总班级数'|trans }}: {{ totalClassroomNum }}</p>
   </li>
 </ul>
