修复最新回答的回复数错误的问题

--- a/src/Topxia/AdminBundle/Resources/views/Default/unsolved-questions-block.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/unsolved-questions-block.html.twig
@@ -19,7 +19,7 @@
                 </a>
   	          </td>
               <td class="pull-right prl">
-                10{# 换成真实数据 #}
+                {{ question.postNum }}
               </td>
   	          <td>
   	          	{% if course %}
