--- a/src/WebBundle/Resources/views/Activity/text-show.html.twig
+++ b/src/WebBundle/Resources/views/Activity/text-show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'TopxiaWebBundle::blank-layout.html.twig' %}
 
-{% set script_controller = 'activitybundle/controller/activity/text-show' %}
 
 {% block content %} 
 	{{activity.content|raw}}
+  <script>app.load('activitybundle/controller/activity-manage/text-activity-fields')</script>
 {% endblock %}
