--- a/src/WebBundle/Resources/views/TaskManage/edit-activity.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-activity.html.twig
@@ -1,28 +1,41 @@
-    <div class="#step-2">
-      {% if currentType|default(false) %}
-      <form id='task-create-form' class="form-horizontal" method="POST"
-          {% if activity|default(false) %}
-            action="{{ path('course_manage_task_update',{courseId:course.id, id:task.id}) }}"
-          {% else %}
-            action="{{ path('course_manage_task_create',{courseId:course.id, currentType:currentType}) }}"
-          {% endif %}
-      >
-        <input type="hidden" name="id" value="{{ task.id|default('') }}">    
-        <input type="hidden" name="activityType" value='{{ currentType }}'>    
-        <input type="hidden" name="fromCourseSetId" value='1'>    
-        <input type="hidden" name="fromCourseId" value='{{ course.id }}'>    
-        {% if not renderer is null and currentType|default(false) %}
-          {% if activity|default(false) %}
-            {{ renderer.renderEditing(activity.id)|raw }}
-          {% else %}
-            {{ renderer.renderCreating()|raw }}
-          {% endif %}
-        {% endif %}
-      </form>
-      {% endif %}
-    </div>
-  </div>
+{% if currentType|default(false) %}
+  <ul class="es-step es-step-3 clearfix js-es-step">
+    <li>
+      <span class="number">1</span>
+      选择教学手段
+    </li>
+    <li class="doing">
+      <span class="number">2</span>
+      设置内容
+    </li>
+    <li>
+      <span class="number">2</span>
+      设置完成条件
+    </li>
+  </ul>
+  <form id='task-create-form' class="form-horizontal" method="POST"
+    {% if activity|default(false) %}
+      action="{{ path('course_manage_task_update',{courseId:course.id, id:task.id}) }}"
+    {% else %}
+      action="{{ path('course_manage_task_create',{courseId:course.id, currentType:currentType}) }}"
+    {% endif %}
+  >
+  <input type="hidden" name="id" value="{{ task.id|default('') }}">    
+  <input type="hidden" name="activityType" value='{{ currentType }}'>    
+  <input type="hidden" name="fromCourseSetId" value='1'>    
+  <input type="hidden" name="fromCourseId" value='{{ course.id }}'>    
+  {% if not renderer is null and currentType|default(false) %}
+    {% if activity|default(false) %}
+      {{ renderer.renderEditing(activity.id)|raw }}
+    {% else %}
+      {{ renderer.renderCreating()|raw }}
+    {% endif %}
+  {% endif %}
+  </form>
+{% endif %}
+<script>app.load('activitybundle/controller/activity-manage/text-activity-fields')</script>
 
-  <script>app.load('taskbundle/controller/task-manage/create')</script>
+
+
   
 
