--- a/web/assets/v2/less/page/course-manage2.less
+++ b/web/assets/v2/less/page/course-manage2.less
@@ -34,4 +34,12 @@
       }
     }
   }
+  &.tab-content {
+    .tab-pane {
+      display: none;
+    }
+    .tab-pane.active {
+      display: block;
+    }
+  }
 }
