--- a/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
@@ -12,7 +12,7 @@
 
 {% block body %}
   <div class="course-tasks-modal tab-content">
-    <div class="tab-pane js-course-tasks-pane active" >
+    <div class="tab-pane js-course-tasks-pane active">
       <ul class="es-step es-step-3 clearfix">
         <li class="doing">
           <span class="number">1</span>
@@ -39,17 +39,12 @@
         {% endif %}
       </ul>
     </div>
-    <div class="tab-pane js-course-tasks-pane" data-url="">
-    </div>
-    <div class="tab-pane js-course-tasks-pane" data-url="">
-    </div>
+    <div id="course-tasks-content"></div>
   </div>
 {% endblock %}
 {% block footer %}
   <button id="course-tasks-prev" type="submit" class="btn btn-primary " disabled data-url="{{ path('course_manage_task_create', {courseId:1}) }}">{{ '上一步'|trans }}</button>
-  <button id="course-tasks-next" type="submit" class="btn btn-primary " disabled>{{ '下一步'|trans }}</button>
-  {% if currentType|default(false) %}
-    <button id="task-create-form-submit" type="submit" class="btn btn-primary pull-right" data-toggle="form-submit" data-target="#task-create-form" data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
-  {% endif %}
+  <button id="course-tasks-next" type="submit" class="btn btn-primary " disabled data-target="#task-create-form" >{{ '下一步'|trans }}</button>
+  <button id="course-tasks-submit" type="submit" class="btn btn-primary hidden" data-toggle="form-submit" data-target="#task-create-form" data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
   <script>app.load('taskbundle/controller/task-manage/create')</script>
 {% endblock %}
