回复查看数

--- a/src/Topxia/AdminBundle/Resources/views/Default/unsolved-questions-block.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/unsolved-questions-block.html.twig
@@ -5,7 +5,7 @@
         <thead>
           <tr>
             <th width="60%">{{'问题'|trans}}</th>
-            <th width="20%">{{'回复数'|trans}}</th>
+            <th width="20%">{{'查看数'|trans}}</th>
             <th width="20%">{{'操作'|trans}}</th>
           </tr>
         </thead>
@@ -19,7 +19,7 @@
                 </a>
   	          </td>
               <td class="pull-right prl">
-                {{ question.postNum }}
+                {{ question.hitNum }}
               </td>
   	          <td>
   	          	{% if course %}
