--- a/src/WebBundle/Resources/views/TaskManage/edit-modal-layout.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-modal-layout.html.twig
@@ -1,6 +1,5 @@
-
-<div class="tab-pane js-course-tasks-pane active">
-  <ul class="es-step es-step-3 clearfix">
+<div class="tab-pane js-course-tasks-pane active js-step2-view">
+  <ul class="es-step es-step-2 clearfix">
     <li>
       <span class="number">1</span>
       选择教学手段
@@ -14,12 +13,12 @@
       设置完成条件
     </li>
   </ul>
-  <form id="step2-from">
+  <form id="step2-form">
     {% block activity_content %}
     {% endblock %}
   </form>
 </div>
-<div class="tab-pane js-course-tasks-pane">
+<div class="tab-pane js-course-tasks-pane js-step3-view">
   <ul class="es-step es-step-3 clearfix">
     <li>
       <span class="number">1</span>
