--- a/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-  <div class="course-tasks-modal " id="">
+  <div class="course-tasks-modal " id="task-editor">
     <div id="task-type">
       <ul class="es-step es-step-3 clearfix">
         <li class="doing">
@@ -40,9 +40,13 @@
       </ul>
     </div>
 
-    <div class="tab-content" id="task-editor">
+    <div class="tab-content">
 
     </div>
+
+    <input type="hidden" name="id" value="{{ task.id|default('') }}">
+    <input type="hidden" name="fromCourseSetId" value='1'>
+    <input type="hidden" name="fromCourseId" value='{{ course.id }}'>
   </div>
 {% endblock %}
 {% block footer %}
