--- a/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
@@ -11,8 +11,8 @@
 {% endblock %}
 
 {% block body %}
-  <div class="course-tasks-modal tab-content" id="task-editor">
-    <div class="tab-pane js-course-tasks-pane active">
+  <div class="course-tasks-modal " id="">
+    <div id="task-type">
       <ul class="es-step es-step-3 clearfix">
         <li class="doing">
           <span class="number">1</span>
@@ -40,7 +40,7 @@
       </ul>
     </div>
 
-    <div id="course-tasks-content">
+    <div class="tab-content" id="task-editor">
 
     </div>
   </div>
@@ -49,5 +49,5 @@
   <button id="course-tasks-prev" type="submit" class="btn btn-primary">{{ '上一步'|trans }}</button>
   <button id="course-tasks-next" type="submit" class="btn btn-primary">{{ '下一步'|trans }}</button>
   <button id="course-tasks-submit" type="submit" class="btn btn-primary hidden" data-toggle="form-submit" data-target="#task-create-form" data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
-  <script>app.load('taskbundle/controller/task-manage/edit')</script>
+  <script>app.load('taskbundle/controller/task-manage/create')</script>
 {% endblock %}
