--- a/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
@@ -49,5 +49,5 @@
   <button id="course-tasks-prev" type="submit" class="btn btn-primary">{{ '上一步'|trans }}</button>
   <button id="course-tasks-next" type="submit" class="btn btn-primary">{{ '下一步'|trans }}</button>
   <button id="course-tasks-submit" type="submit" class="btn btn-primary hidden" data-toggle="form-submit" data-target="#task-create-form" data-submiting-text="{{ '正在保存...'|trans }}">{{ '保存'|trans }}</button>
-  <script>app.load('taskbundle/controller/task-manage/create')</script>
+  <script>app.load('bundles/web/controller/task-manage/create.js')</script>
 {% endblock %}
