fix: create text activity js

--- a/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-modal.html.twig
@@ -44,9 +44,9 @@
 
     </div>
 
-    <input type="hidden" name="id" value="{{ task.id|default('') }}">
-    <input type="hidden" name="fromCourseSetId" value='1'>
-    <input type="hidden" name="fromCourseId" value='{{ course.id }}'>
+    <input class="js-hidden-data" type="hidden" name="id" value="{{ task.id|default('') }}">
+    <input class="js-hidden-data" type="hidden" name="fromCourseSetId" value='1'>
+    <input class="js-hidden-data" type="hidden" name="fromCourseId" value='{{ course.id }}'>
   </div>
 {% endblock %}
 {% block footer %}
