fix: activity view move to controller

--- a/src/WebBundle/Resources/views/TaskManage/edit-activity.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/edit-activity.html.twig
@@ -1,10 +1,10 @@
-<div class="js-editor-save-url" data-url="{{ path('course_manage_task_create', {courseId: course.id, type: currentType}) }}"></div>
+<div class="js-editor-save-url"
+     data-url="{{ path('course_manage_task_create', {courseId: course.id, type: currentType}) }}"></div>
 
-{% if not renderer is null and currentType|default(false) %}
-  {% if activity|default(false) %}
-    {{ renderer.renderEditing(activity.id)|raw }}
-  {% else %}
-    {{ renderer.renderCreating()|raw }}
-  {% endif %}
+{% if activity|default(false) %}
+  {{ render(controller(activity_controller, {'id': activity.id})) }}
+{% else %}
+  {{ render(controller(activity_controller)) }}
 {% endif %}
+
 
