--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -61,6 +61,10 @@
           {% include 'TopxiaWebBundle:CourseLessonManage:list-item.html.twig' with {lesson: item, file: files[item.mediaId]|default(null)} %}
         {% endif %}
       {% endfor %}
+
+        {% for task in tasks %}
+          {% include 'WebBundle:TaskManage:list-item.html.twig' with {task:task} %}
+        {% endfor %}
     </ul>
     </div>
   </div>
